@@ -1,3 +1,9 @@
+2000-12-09  olicha  <olivier.chapuis@free.fr>
+
+	* fvwm-menu-desktop.in:
+	* fvwm-menu-desktop.1:
+	New option --utf8 for UTF8 encoding (in KDE2)
+
 2000-12-05  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* make_fvwmdist.sh:
