@@ -1,3 +1,8 @@
+2000-12-09  olicha  <olivier.chapuis@free.fr>
+
+	* FvwmWinList/FvwmWinList.c (ProcessMessage):
+	Fixed animation of non visible items with ShowCurrent desk
+
 2000-12-06  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmIconMan/xmanager.c (clear_empty_region):
